fixed modal on mobile going all the way to the edges

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -203,7 +203,7 @@
   .modal__container {
     width: 300px;
     height: 336px;
-    width: 100%;
+    width: 95%;
   }
 
   .modal__image_viewer-selected {
